--- a/package.json
+++ b/package.json
@@ -74,12 +74,15 @@
 		]
 	},
 	"dependencies": {
+		"gulp": "^4.0.2",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2",
-		"react-router-dom": "^6.4.3"
+		"react-router": "^6.21.0",
+		"react-router-dom": "^6.4.3",
+		"semantic-ui-css": "^2.5.0",
+		"semantic-ui-react": "^2.1.5"
 	}
 }
